# MMMCalc

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.xml
src/: MMMCalc.java  Main.c  main.c  manifest.mf
src/mmmcalc/: MMMCalc.java
